Bug 374141. When printing on Windows, use an effective DPI of 144 instead of whatever the printer is. This makes native theme pixels be a reasonable size. r=stuart